--- a/src/styles/CvDetails.scss
+++ b/src/styles/CvDetails.scss
@@ -224,6 +224,11 @@
 .MuiBox-root {
   .form-flex {
     display: flex;
+    justify-content: center;
+    width: 100%;
+    .form-flex-left {
+      width: 80%;
+    }
   }
 }
 .close-modal-btn {
@@ -265,4 +270,91 @@ h4 {
   letter-spacing: 1px;
   border-bottom: 2px solid #737373;
   padding-bottom: 10px;
+}
+input,
+textarea {
+  border: none;
+  outline: none;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+
+.upld {
+  position: relative;
+  margin-bottom: 20px;
+  .upld-list-item {
+    position: relative;
+    .upload-dlt-btn {
+      position: absolute;
+      top: -10px;
+      right: 0;
+      width: 40px;
+      height: 40px;
+      background: transparent;
+      outline: none;
+      cursor: pointer;
+      border: none;
+    }
+  }
+
+  .up-add {
+    background-color: #000;
+    color: #fff;
+    padding: 5px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    display: block;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+}
+.up-photo {
+  position: relative;
+  label {
+    border-radius: 3px;
+    font-size: 18px;
+    cursor: pointer;
+
+    &::after {
+      content: "Choose file";
+      display: inline-block;
+      background-color: #000;
+      color: #fff;
+      padding: 5px 20px;
+      border-radius: 10px;
+      cursor: pointer;
+      display: block;
+      margin-top: 10px;
+      font-size: 16px;
+      width: 15%;
+    }
+  }
+  .file-input {
+    position: absolute;
+    top: 30px;
+    right: 50px;
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    cursor: pointer;
+    width: 160%;
+    border: 2px solid red;
+  }
+}
+.update-btn {
+  padding: 5px 30px;
+  background: transparent;
+  border: 1px solid black;
+  border-radius: 5px;
+  color: #000;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  font-size: 18px;
+  &:hover {
+    border: 1px solid #fff;
+    background-color: #fff;
+    color: #000;
+  }
 }
